new change added

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         </title>
     </head>
     <body>
-     <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
-     <a href="college.html"> College</a>&nbsp;&nbsp;&nbsp;&nbsp;
-     <a href="city.html">City</a>&nbsp;&nbsp;&nbsp;&nbsp;
-     <a href="hobbies.html">Hobbies</a>&nbsp;&nbsp;&nbsp;&nbsp;
-     <a href="contact.html">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="./pages/index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="./pages/college.html"> College</a>&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="./pages/city.html">City</a>&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="./pages/hobbies.html">Hobbies</a>&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="./pages/contact.html">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <hr>
      <b> Self Information</b><br>
      <b> Name :</b>Shinde Monika Ashok<br>
