--- a/pages/city.html
+++ b/pages/city.html
@@ -4,7 +4,7 @@
         <title>City</title>
     </head>
     <body>
-        <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./../index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="college.html"> College</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="city.html">City</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="hobbies.html">Hobbies</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -12,7 +12,7 @@
      <hr>
      <h2>City</h2>
      Chhtrapati Smabhajinagar<br>
-     <img src="C:\Users\HP\Desktop\Assinment.3\S_nagar.jpg"
+     <img src="C:\Users\HP\Desktop\Proper_folder\img"
      width="400px"
      height="300px">
         
