--- a/pages/college.html
+++ b/pages/college.html
@@ -4,14 +4,14 @@
         <title>College</title>
     </head>
     <body>
-        <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./../index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="college.html"> College</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="city.html">City</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="hobbies.html">Hobbies</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="contact.html">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <hr>
      <h2>College</h2>
-     <img src="C:\Users\HP\Desktop\Assinment.3\clg.jpg"><br>
+     <img src="C:\Users\HP\Desktop\Proper_folder\img"><br>
      Womens College of Home Science and BCA Loni.
     </body>
 </html>
