--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -4,15 +4,15 @@
         <title>Hobbies</title>
     </head>
     <body>
-        <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./../index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="college.html"> College</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="city.html">City</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="hobbies.html">Hobbies</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <a href="contact.html">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;
      <hr>
      <h1>Cooking</h1>
-     <img src="C:\Users\HP\Desktop\Assinment.3\cooking1.jpg">
+     <img src="C:\Users\HP\Desktop\Proper_folder\img">
      <h2>Coding</h2>
-     <img src="C:\Users\HP\Desktop\Assinment.3\cod.jpg">
+     <img src="C:\Users\HP\Desktop\Proper_folder\img">
     </body>
 </html>
